--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 .App {
   margin: 2rem;
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     font-size: 1.2rem;
 }
@@ -41,4 +41,15 @@ ul{
 
 .error.active{
   transform: translateX(6rem)
+}
+
+.colorbox {
+    margin-left: 50px;
+    margin-top: 15px;
+}
+
+.colorbox div {
+   padding: 50px;
+   margin: 10px;
+   border: 1px solid;
 }
